# pubdelays

./: .gitignore  404.html  DATA_LAYOUT.md  LEGACY.md  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  review_tasks.md  search.html  sitemap.xml  zensical.toml
.github/workflows/: docs.yml
ANALYSIS_DATASET_V1/: index.html
PIPELINE_CONTEXT/: index.html
SEMANTIC_DECISIONS/: index.html
STAGE_CONTRACTS/: index.html
VALIDATION_AND_BENCHMARKS/: index.html
audit-findings/: 001-remote-download-link-escapes-output-directory.md  001-remote-download-link-escapes-output-directory.patch  002-unbounded-ftp-response-read-exhausts-memory.md  002-unbounded-ftp-response-read-exhausts-memory.patch  003-untrusted-xml-can-resolve-local-external-entities.md  003-untrusted-xml-can-resolve-local-external-entities.patch  004-remote-href-traverses-download-path.md  004-remote-href-traverses-download-path.patch
cli/: index.html
config/: default.toml
data/: README.md
data-layout/: index.html
data/manifests/: pipeline.sqlite
docs/: ANALYSIS_DATASET_V1.md  PIPELINE_CONTEXT.md  SEMANTIC_DECISIONS.md  STAGE_CONTRACTS.md  VALIDATION_AND_BENCHMARKS.md  cli.md  data-layout.md  function-flow.md  getting-started.md  hpc-slurm.md  index.md  legacy.md
docs/concepts/: architecture.md  data-model.md  index.md  invariants.md  terminology.md
docs/contributing/: development.md  documentation.md  index.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
function-flow/: index.html
getting-started/: index.html
hpc-slurm/: index.html
scripts/: bootstrap_uv.sh  download_pubmed.sh  pipeline.sh  slurm_aggregate.sh  slurm_parse_array.sh  slurm_prepare_arrays.sh  slurm_transform_array.sh
search/: search_index.json
stylesheets/: extra.css
tests/: test_aggregate.py  test_analysis_schema.py  test_cli_normalization.py  test_config.py  test_differential_validation.py  test_download.py  test_end_to_end_pipeline.py  test_external_preprocessors.py  test_manifest.py  test_medline_parser.py  test_preflight_inputs.py  test_shards.py  test_slurm.py  test_summaries.py  test_transform_articles.py
(+47 files in other folders)
