[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubdelays"
version = "0.1.0"
description = "Reproducible PubMed/MEDLINE pipeline for publication-delay analyses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "lxml>=4.9",
  "polars>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4"
]
docs = [
  "mkdocs>=1.6"
]

[project.scripts]
pubdelays = "pubdelays.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
